crear esdeveniment front-end

--- a/ionic-esdeveniments/capacitor.config.json
+++ b/ionic-esdeveniments/capacitor.config.json
@@ -1,6 +1,6 @@
 {
-  "appId": "io.ionic.starter",
-  "appName": "ionic-esdeveniments",
+  "appId": "cat.pcolletm.events",
+  "appName": "ionic-events",
   "bundledWebRuntime": false,
   "npmClient": "npm",
   "webDir": "www",
