--- a/server/settings.gradle
+++ b/server/settings.gradle
@@ -1,9 +1,7 @@
 include 'common'
-include 'esdeveniments-configuration'
-include 'adapters:esdeveniments-web'
-findProject(':adapters:esdeveniments-web')?.name = 'esdeveniments-web'
-include 'adapters:esdeveniments-persistence'
-findProject(':adapters:esdeveniments-persistence')?.name = 'esdeveniments-persistence'
-include 'esdeveniments-application'
-include 'esdeveniments-testdata'
+include 'events-configuration'
+include 'adapters:events-web'
+include 'adapters:events-persistence'
+include 'events-application'
+include 'events-testdata'
 
