creació events finalitzada

--- a/server/adapters/events-web/build.gradle
+++ b/server/adapters/events-web/build.gradle
@@ -3,6 +3,7 @@ dependencies {
     implementation project(':events-application')
 
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'joda-time:joda-time:2.10.6'
 
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
