--- a/ionic-esdeveniments/package.json
+++ b/ionic-esdeveniments/package.json
@@ -13,6 +13,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.1.0",
     "@angular/common": "~8.2.14",
     "@angular/core": "~8.2.14",
     "@angular/forms": "~8.2.14",
@@ -38,6 +39,7 @@
     "@capacitor/cli": "2.0.1",
     "@ionic/angular-toolkit": "^2.1.1",
     "@ionic/lab": "3.1.7",
+    "@types/googlemaps": "^3.39.7",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
