--- a/server/adapters/events-persistence/build.gradle
+++ b/server/adapters/events-persistence/build.gradle
@@ -7,6 +7,7 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'joda-time:joda-time:2.10.6'
 
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'junit' // excluding junit 4
