--- a/server/common/build.gradle
+++ b/server/common/build.gradle
@@ -1,5 +1,8 @@
 dependencies {
     implementation 'org.springframework:spring-context'
     implementation 'javax.validation:validation-api'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.11.0'
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.11.0'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.11.0'
 }
 
