--- a/server/events-application/build.gradle
+++ b/server/events-application/build.gradle
@@ -5,8 +5,10 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
 
     implementation 'org.springframework.boot:spring-boot-starter-validation'
-
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.11.0'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.11.0'
     implementation 'javax.transaction:javax.transaction-api'
+    implementation 'joda-time:joda-time:2.10.6'
 
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'junit' // excluding junit 4
