--- a/server/events-configuration/src/main/resources/application.properties
+++ b/server/events-configuration/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+java.runtime.version=11
+
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:~/app_esdeveniments
 spring.datasource.driverClassName=org.h2.Driver
