--- a/server/events-application/build.gradle
+++ b/server/events-application/build.gradle
@@ -9,21 +9,9 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.11.0'
     implementation 'javax.transaction:javax.transaction-api'
     implementation 'joda-time:joda-time:2.10.6'
+    implementation 'org.apache.pdfbox:pdfbox:2.0.20'
     implementation 'org.springframework.security:spring-security-core:5.3.3.RELEASE'
-
-    testImplementation('org.springframework.boot:spring-boot-starter-test') {
-        exclude group: 'junit' // excluding junit 4
-    }
-    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.7.0-M1'
-    testImplementation 'org.mockito:mockito-junit-jupiter:3.3.3'
-    testImplementation 'com.tngtech.archunit:archunit:0.13.1'
-    testImplementation 'de.adesso:junit-insights:1.1.0'
-    testImplementation 'org.junit.platform:junit-platform-launcher:1.7.0-M1'
-    testImplementation project(':events-testdata')
 }
 
-test {
-    useJUnitPlatform()
-    systemProperty 'de.adesso.junitinsights.enabled', 'true'
-}
+
 
