--- a/server/events-configuration/build.gradle
+++ b/server/events-configuration/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security:2.3.1.RELEASE'
     implementation 'org.springframework.security:spring-security-core:5.3.3.RELEASE'
     implementation 'org.springframework.session:spring-session:1.3.5.RELEASE'
+    implementation 'org.postgresql:postgresql'
     runtimeOnly 'com.h2database:h2'
 }
 
